[package]
name = "wasm-webgl"
version = "0.1.0"
authors = ["kaminora <kaminoura9207@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
nalgebra-glm = "0.3"

console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.60"
features = [
  'WebGl2RenderingContext',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "s"
